fix: align padding, marging for nav, footer, header, main

--- a/style.css
+++ b/style.css
@@ -16,37 +16,26 @@ body {
     min-height: 100vh;
     max-width: 1300px;
     margin: 0 auto;
-    padding: 0;
+    padding: 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: rgb(189, 186, 186);
+    border: 1px solid #998282;
 }
 
 nav {
-    border: 1px solid red;
     background-color: #998282;
 }
 
-header {
-    border: 1px solid red;
-    display: flex;
-}
-
 main {
-    border: 1px solid red;
     display: flex;
     width: 100%;
 }
 
 footer {
-    border: 1px solid red;
     background-color: #998282;
-}
 
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
 }
 
 .nav-list {
@@ -54,6 +43,8 @@ footer {
     justify-content: flex-end;
     align-items: center;
     list-style: none;
+    padding-inline-end: 40px;
+    padding-inline-start: 40px;
 }
 
 .nav-link {
@@ -91,12 +82,12 @@ footer {
 
 aside {
     width: 70%;
-    padding: 20px
+    padding: 20px 40px 20px 20px;
 }
 
 .main {
     width: 30%;
-    padding: 20px
+    padding: 20px;
 }
 
 .contact-list {
@@ -118,11 +109,13 @@ aside {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    padding-inline-end: 40px;
+    padding-inline-start: 40px;
 }
 
 header {
     display: flex;
-    padding: 50px 30px 35px;
+    padding: 50px 40px 35px 40px;
     justify-content: space-between;
     text-align: center;
     max-width: 1300px;
@@ -159,11 +152,11 @@ h2 {
 }
 
 
-main h3 {
+main .section-title {
     text-align: center;
 }
 
-aside h3 {
+aside .section-title {
     text-align: left;
 }
 
@@ -171,9 +164,23 @@ aside h3 {
     margin-left: 20px;
 }
 
+aside .section {
+    text-align: justify;
+}
+
+.code {
+    font-size: 15px;
+}
+
+
 @media screen and (max-width: 800px) {
     .nav {
         display: none;
+    }
+
+    header {
+        flex-direction: column;
+
     }
 
     main {
@@ -183,6 +190,10 @@ aside h3 {
     .main,
     aside {
         width: 100%;
+    }
+
+    main h3 {
+        text-align: left;
     }
 
 }
